GitHub does not like an empty baseurl; setting to /

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,12 +10,12 @@
         <title>{{ page.title }}</title>
         <meta name="description" content="{{ page.description }}">
     
-        <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap/bootstrap.min.css">
-        <link rel="stylesheet" href="{{ site.baseurl }}/assets/fonts/source-sans/stylesheet.css">
-        <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/prettify.css">        
-        <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/syntax.css">        
+        <link rel="stylesheet" href="/assets/css/bootstrap/bootstrap.min.css">
+        <link rel="stylesheet" href="/assets/fonts/source-sans/stylesheet.css">
+        <link rel="stylesheet" href="/assets/css/prettify.css">        
+        <link rel="stylesheet" href="/assets/css/syntax.css">        
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css">        
-        <link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
+        <link rel="shortcut icon" href="/assets/images/favicon.ico">
     </head>
 
     <body>
@@ -32,9 +32,9 @@
         <header class="top">
             <div class="container">
                 <ul class="nav nav-justified">
-                  <li><a href="{{ site.baseurl }}/index.html">Adobe Consulting Services</a></li>
-                  <li><a href="{{ site.baseurl }}/acs-aem-commons">ACS AEM Commons</a></li>
-                  <li><a href="{{ site.baseurl }}/acs-aem-tools">ACS AEM Tools</a></li>
+                  <li><a href="/index.html">Adobe Consulting Services</a></li>
+                  <li><a href="/acs-aem-commons">ACS AEM Commons</a></li>
+                  <li><a href="/acs-aem-tools">ACS AEM Tools</a></li>
 
                 </ul>
             </div>
@@ -46,17 +46,17 @@
 
         <footer>
             <div class="container">
-                <a href="{{ site.baseurl }}/pages/license.html">License</a>
+                <a href="/pages/license.html">License</a>
                 <span class="right">
                         &copy; Adobe Systems Incorporated. All Rights Reserved
                 </span>
             </div>
         </footer>
 
-        <script src="{{ site.baseurl }}/assets/js/jquery.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/prettify.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/bootstrap/bootstrap.min.js"></script>
-        <script src="{{ site.baseurl }}/assets/js/core.js"></script>
+        <script src="/assets/js/jquery.js"></script>
+        <script src="/assets/js/prettify.js"></script>
+        <script src="/assets/js/bootstrap/bootstrap.min.js"></script>
+        <script src="/assets/js/core.js"></script>
  
     </body>
 </html>
