Missed {{ site.baseurl }} removal

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="/assets/fonts/source-sans/stylesheet.css">
         <link rel="stylesheet" href="/assets/css/prettify.css">        
         <link rel="stylesheet" href="/assets/css/syntax.css">        
-        <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css">        
+        <link rel="stylesheet" href="/assets/css/styles.css">        
         <link rel="shortcut icon" href="/assets/images/favicon.ico">
     </head>
 
