--- a/lib/acs-aem-project.less
+++ b/lib/acs-aem-project.less
@@ -7,10 +7,12 @@
 	h1 {
 		color: #666;
 		text-shadow: #ccc 0px 1px 0px;		
+		white-space: nowrap;
 	}
 
 	.lead {
 		text-shadow: #666 0px 2px 0px;
+		white-space: nowrap;
 	}	
 }
 
