--- a/_includes/commons/jumbotron.html
+++ b/_includes/commons/jumbotron.html
@@ -1,16 +1,24 @@
 <section id="jumbotron">
     <div class="container">
         <div class="slide">
-            <div class="image">
-                <img width="500px" src="/assets/commons/images/slides/package-manager.png"/>
-            </div>
 
-            <div class="message">
-                <div class="text">
-                    <h1>{{ page.title }}</h1>
-                    <p class="lead">The wheel works just fine.</p>
+            <div class="wrapper">
+
+                <div class="dominant">
+                    <div class="image">
+                        <img class="img-responsive" src="/assets/commons/images/slides/package-manager.png"/>
+                    </div>
                 </div>
-                <a href="#features" class="action-btn">Checkout all the Features!</a>
+
+                <div class="submissive">
+                    <div class="message">
+                        <div class="text">
+                            <h1>{{ page.title }}</h1>
+                            <p class="lead">The wheel works just fine.</p>
+                        </div>
+                        <a href="#features" class="action-btn">Checkout all the Features!</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
