--- a/_includes/shared/head.html
+++ b/_includes/shared/head.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/assets/shared/fonts/source-sans/stylesheet.css">
     <link rel="stylesheet" href="/assets/shared/css/vendor/prettify.css">
     <link rel="stylesheet" href="/assets/shared/css/vendor/syntax.css">
+    <link rel="stylesheet" href="/assets/shared/css/vendor/unslider.css">
     <link rel="stylesheet" href="/assets/{{ page.project }}/css/styles.css">
     <link rel="shortcut icon" href="/assets/{{ page.project }}/favicon.ico">
 </head>
