--- a/lib/shared/core.less
+++ b/lib/shared/core.less
@@ -34,3 +34,16 @@ h4 {
   .code;
   font-family: Courier, serif;
 }
+
+.rounded-corners(@radius) {
+  -moz-border-radius: @radius;
+  -webkit-border-radius: @radius;
+  border-radius: @radius;
+  -khtml-border-radius: @radius;
+}
+
+
+.shadow() {
+  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+}
