--- a/_includes/commons/nav.html
+++ b/_includes/commons/nav.html
@@ -1,7 +1,7 @@
 <ul class="nav">
-    <li><a href="{{ site.baseurl }}acs-aem-commons/index.html">ACS AEM Commons</a></li>
-    <li><a href="{{ site.baseurl }}acs-aem-commons/index.html#features">Features</a></li>
+    <li><a href="/acs-aem-commons">ACS AEM Commons</a></li>
+    <li><a href="/acs-aem-commons#features">Features</a></li>
     <li><a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons" target="_blank">GitHub Project</a></li>
-    <li><a href="{{ site.baseurl }}acs-aem-commons/apidocs/">API Docs</a></li>
+    <li><a href="/acs-aem-commons/apidocs/" target="_blank">API Docs</a></li>
     <li><a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/blob/master/CONTRIBUTING.md" target="_blank">Contribute</a></li>
 </ul>
