--- a/_includes/projects/jumbotron.html
+++ b/_includes/projects/jumbotron.html
@@ -1,11 +1,12 @@
 <section id="jumbotron">
-    <div class="container">
-        <div class="unslider">
+    <div class="unslider">
 
-            <ul>
-                {% include projects/slides/overview.html %}
-            </ul>
+        <ul>
+        	{% include projects/slides/intro.html %}
+        	{% include projects/slides/acs-aem-commons.html %}
+        	{% include projects/slides/acs-aem-tools.html %}
 
-        </div>
+        </ul>
+
     </div>
 </section>
