--- a/_includes/shared/footer.html
+++ b/_includes/shared/footer.html
@@ -1,8 +1,10 @@
 <footer>
     <div class="container">
         <a href="/pages/license.html">License</a>
-                <span class="right">
-                        &copy; Adobe Systems Incorporated. All Rights Reserved
-                </span>
-    </div>
+        <span class="right">
+                &copy; Adobe Systems Incorporated. All Rights Reserved
+        </span>
+
+        <a href="/" class="float: right">ACS AEM Projects</a>
+	</div>
 </footer>
