--- a/_includes/tools/slides/aem-fiddle.html
+++ b/_includes/tools/slides/aem-fiddle.html
@@ -1,22 +1,21 @@
 <li class="slide">
 
-    <div class="wrapper">
+    <div class="container">
+        <div class="wrapper">
 
-        <div class="dominant">
-            <div class="image">
+            <div class="primary image">
                 <img class="img-responsive" src="/assets/tools/images/slides/aem-fiddle.png"/>
             </div>
-        </div>
 
-        <div class="submissive">
-            <div class="message">
+            <div class="secondary message">
                 <div class="text">
                     <h1>AEM Fiddle</h1>
                     <p class="lead">Web IDE perfect for POC’s, experimenting and running ad hoc scripts</p>
                 </div>
-                <a href="#features" class="action-btn">Learn more about AEM Fiddle</a>
+                <a href="#features" class="action-btn">Learn about AEM Fiddle</a>
             </div>
+            
         </div>
-    </div>
+    </div>    
 
 </li>
