--- a/_includes/commons/jumbotron.html
+++ b/_includes/commons/jumbotron.html
@@ -1,25 +1,9 @@
 <section id="jumbotron">
-    <div class="container">
-        <div class="slide">
+    <div class="unslider">
 
-            <div class="wrapper">
+        <ul>
+            {% include commons/slides/intro.html %}
+        </ul>
 
-                <div class="dominant">
-                    <div class="image">
-                        <img class="img-responsive" src="/assets/commons/images/slides/package-manager.png"/>
-                    </div>
-                </div>
-
-                <div class="submissive">
-                    <div class="message">
-                        <div class="text">
-                            <h1>{{ page.title }}</h1>
-                            <p class="lead">The wheel works just fine.</p>
-                        </div>
-                        <a href="#features" class="action-btn">Checkout all the Features!</a>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 </section>
