--- a/_includes/tools/nav.html
+++ b/_includes/tools/nav.html
@@ -1,6 +1,6 @@
 <ul class="nav">
-    <li {% if page.path == 'index.html' %}class="active"{% endif %}><a href="{{ site.baseurl }}/index.html">ACS AEM Tools</a></li>
-    <li><a href="{{ site.baseurl }}/index.html#features">Features</a></li>
+    <li><a href="/acs-aem-tools">ACS AEM Tools</a></li>
+    <li><a href="/acs-aem-tools#features">Features</a></li>
     <li><a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools" target="_blank">GitHub Project</a></li>
     <li><a href="https://github.com/Adobe-Consulting-Services/acs-aem-tools/blob/master/CONTRIBUTING.md" target="_blank">Contribute</a></li>
 </ul>
