--- a/_includes/tools/slides/query-editor.html
+++ b/_includes/tools/slides/query-editor.html
@@ -1,21 +1,21 @@
 <li class="slide">
-    <div class="wrapper">
 
-        <div class="submissive">
-            <div class="message">
+    <div class="container">
+        <div class="wrapper">
+
+            <div class="secondary message">
                 <div class="text">
                     <h1>Query Editor</h1>
                     <p class="lead">Build and debug QueryBuilder queries in real time</p>
                 </div>
-                <a href="/acs-aem-tools/features/query-editor.html" class="action-btn">Learn more about Query Editor</a>
+                <a href="/acs-aem-tools/features/query-editor.html" class="action-btn">Learn about Query Editor</a>
             </div>
-        </div>
 
-        <div class="dominant">
-            <div class="image">
-                <img class="img-responsive" src="/assets/tools/images/slides/query-editor.png"/>
-            </div>
-        </div>
 
-    </div>
+            <div class="primary image">
+                <img class="img-responsive" src="/assets/tools/images/slides/aem-fiddle.png"/>
+            </div>            
+        </div>
+    </div>    
+
 </li>
