More jumbotronics and misc cleanup

--- a/_includes/projects/slides/acs-aem-commons.html
+++ b/_includes/projects/slides/acs-aem-commons.html
@@ -6,9 +6,9 @@
             <div class="secondary message">
                 <div class="text">
                     <h1>ACS AEM Commons</h1>
-                    <p class="lead">The wheel is fine.</p>
+                    <p class="lead">An ala carte selection of AEM functionalities, components and development tools.</p>
                 </div>
-                <a href="/acs-aem-commons" class="action-btn">Get started with ACS AEM Commons!</a>
+                <a href="/acs-aem-commons" class="action-btn">Get started with ACS AEM Commons</a>
             </div>
 
 
