--- a/lib/shared/core.less
+++ b/lib/shared/core.less
@@ -1,4 +1,7 @@
 @import "../vendor/bootstrap/less/bootstrap.less";
+@import "../vendor/prettify.less";
+@import "../vendor/syntax.less";
+@import "../vendor/unslider.less";
 
 body {
   background: #fff;
