--- a/lib/shared/icons.less
+++ b/lib/shared/icons.less
@@ -23,6 +23,16 @@
   background-position:-200px 0px;
 }
 
+.icon-download {
+  .info-icons();
+  background-position:-300px 0px;
+}
+
+.icon-laptop {
+  .info-icons();
+  background-position:-400px 0px;
+}
+
 .project-icons {
   background-image: url('/assets/shared/images/project-icons.png');
   width: 100px;
