--- a/lib/shared/shared.less
+++ b/lib/shared/shared.less
@@ -58,6 +58,22 @@ header.top {
       li:first-child {
         font-weight: normal;
       }
+
+      li.acs-aem-projects {
+        float: right;
+
+        a {
+          background-image: url('/assets/shared/images/icon-lightbulb.png');
+          background-repeat: none;
+          background-position: center center;
+          display: block;
+          width: 37px;
+          height: 37px;
+          position: absolute;
+          top: -5px;          
+        }
+      }
+
     }
   }
 }
