--- a/_includes/projects/slides/intro.html
+++ b/_includes/projects/slides/intro.html
@@ -1,20 +1,18 @@
 <li class="slide">
 
     <div class="container">
-        <div class="wrapper">
+        <div class="stacked">
 
-            <div class="secondary message">
+            <img class="img-responsive" src="/assets/projects/slides/intro/package-icons.png"/>
+            
+            <div class="message">
                 <div class="text">
                     <h1>ACS AEM Projects</h1>
                     <p class="lead">We like what we do.</p>
                 </div>
-                <a href="#projects" class="action-btn">Checkout our Projects!</a>
+                <a href="#projects" class="action-btn">Checkout our Projects</a>
             </div>
-
-
-            <div class="primary image">
-                <img class="img-responsive" src="/assets/commons/images/giant-package-icon.png"/>
-            </div>            
+         
         </div>
     </div>    
 
