--- a/assets/projects/css/styles.css
+++ b/assets/projects/css/styles.css
@@ -5779,6 +5779,428 @@ button.close {
     display: none !important;
   }
 }
+/* Pretty printing styles. Used with prettify.js. */
+/* SPAN elements with the classes below are added by prettyprint. */
+.pln {
+  color: #000000;
+}
+/* plain text */
+@media screen {
+  .str {
+    color: #008800;
+  }
+  /* string content */
+  .kwd {
+    color: #000088;
+  }
+  /* a keyword */
+  .com {
+    color: #880000;
+  }
+  /* a comment */
+  .typ {
+    color: #660066;
+  }
+  /* a type name */
+  .lit {
+    color: #006666;
+  }
+  /* a literal value */
+  /* punctuation, lisp open bracket, lisp close bracket */
+  .pun,
+  .opn,
+  .clo {
+    color: #666600;
+  }
+  .tag {
+    color: #000088;
+  }
+  /* a markup tag name */
+  .atn {
+    color: #660066;
+  }
+  /* a markup attribute name */
+  .atv {
+    color: #008800;
+  }
+  /* a markup attribute value */
+  .dec,
+  .var {
+    color: #660066;
+  }
+  /* a declaration; a variable name */
+  .fun {
+    color: #ff0000;
+  }
+  /* a function name */
+}
+/* Use higher contrast and text-weight for printable form. */
+@media print, projection {
+  .str {
+    color: #006600;
+  }
+  .kwd {
+    color: #006;
+    font-weight: bold;
+  }
+  .com {
+    color: #600;
+    font-style: italic;
+  }
+  .typ {
+    color: #404;
+    font-weight: bold;
+  }
+  .lit {
+    color: #004444;
+  }
+  .pun,
+  .opn,
+  .clo {
+    color: #444400;
+  }
+  .tag {
+    color: #006;
+    font-weight: bold;
+  }
+  .atn {
+    color: #440044;
+  }
+  .atv {
+    color: #006600;
+  }
+}
+/* Put a border around prettyprinted code snippets. */
+pre.prettyprint {
+  padding: 2px;
+  border: 1px solid #888888;
+}
+/* Specify class=linenums on a pre to get line numbering */
+ol.linenums {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+/* IE indents via margin-left */
+li.L0,
+li.L1,
+li.L2,
+li.L3,
+li.L5,
+li.L6,
+li.L7,
+li.L8 {
+  list-style-type: none;
+}
+/* Alternate shading for lines */
+li.L1,
+li.L3,
+li.L5,
+li.L7,
+li.L9 {
+  background: #eeeeee;
+}
+.highlight {
+  background: #ffffff;
+}
+.highlight .c {
+  color: #999988;
+  font-style: italic;
+}
+/* Comment */
+.highlight .err {
+  color: #a61717;
+  background-color: #e3d2d2;
+}
+/* Error */
+.highlight .k {
+  font-weight: bold;
+}
+/* Keyword */
+.highlight .o {
+  font-weight: bold;
+}
+/* Operator */
+.highlight .cm {
+  color: #999988;
+  font-style: italic;
+}
+/* Comment.Multiline */
+.highlight .cp {
+  color: #999999;
+  font-weight: bold;
+}
+/* Comment.Preproc */
+.highlight .c1 {
+  color: #999988;
+  font-style: italic;
+}
+/* Comment.Single */
+.highlight .cs {
+  color: #999999;
+  font-weight: bold;
+  font-style: italic;
+}
+/* Comment.Special */
+.highlight .gd {
+  color: #000000;
+  background-color: #ffdddd;
+}
+/* Generic.Deleted */
+.highlight .gd .x {
+  color: #000000;
+  background-color: #ffaaaa;
+}
+/* Generic.Deleted.Specific */
+.highlight .ge {
+  font-style: italic;
+}
+/* Generic.Emph */
+.highlight .gr {
+  color: #aa0000;
+}
+/* Generic.Error */
+.highlight .gh {
+  color: #999999;
+}
+/* Generic.Heading */
+.highlight .gi {
+  color: #000000;
+  background-color: #ddffdd;
+}
+/* Generic.Inserted */
+.highlight .gi .x {
+  color: #000000;
+  background-color: #aaffaa;
+}
+/* Generic.Inserted.Specific */
+.highlight .go {
+  color: #888888;
+}
+/* Generic.Output */
+.highlight .gp {
+  color: #555555;
+}
+/* Generic.Prompt */
+.highlight .gs {
+  font-weight: bold;
+}
+/* Generic.Strong */
+.highlight .gu {
+  color: #aaaaaa;
+}
+/* Generic.Subheading */
+.highlight .gt {
+  color: #aa0000;
+}
+/* Generic.Traceback */
+.highlight .kc {
+  font-weight: bold;
+}
+/* Keyword.Constant */
+.highlight .kd {
+  font-weight: bold;
+}
+/* Keyword.Declaration */
+.highlight .kp {
+  font-weight: bold;
+}
+/* Keyword.Pseudo */
+.highlight .kr {
+  font-weight: bold;
+}
+/* Keyword.Reserved */
+.highlight .kt {
+  color: #445588;
+  font-weight: bold;
+}
+/* Keyword.Type */
+.highlight .m {
+  color: #009999;
+}
+/* Literal.Number */
+.highlight .s {
+  color: #dd1144;
+}
+/* Literal.String */
+.highlight .na {
+  color: #008080;
+}
+/* Name.Attribute */
+.highlight .nb {
+  color: #0086b3;
+}
+/* Name.Builtin */
+.highlight .nc {
+  color: #445588;
+  font-weight: bold;
+}
+/* Name.Class */
+.highlight .no {
+  color: #008080;
+}
+/* Name.Constant */
+.highlight .ni {
+  color: #800080;
+}
+/* Name.Entity */
+.highlight .ne {
+  color: #990000;
+  font-weight: bold;
+}
+/* Name.Exception */
+.highlight .nf {
+  color: #990000;
+  font-weight: bold;
+}
+/* Name.Function */
+.highlight .nn {
+  color: #555555;
+}
+/* Name.Namespace */
+.highlight .nt {
+  color: #000080;
+}
+/* Name.Tag */
+.highlight .nv {
+  color: #008080;
+}
+/* Name.Variable */
+.highlight .ow {
+  font-weight: bold;
+}
+/* Operator.Word */
+.highlight .w {
+  color: #bbbbbb;
+}
+/* Text.Whitespace */
+.highlight .mf {
+  color: #009999;
+}
+/* Literal.Number.Float */
+.highlight .mh {
+  color: #009999;
+}
+/* Literal.Number.Hex */
+.highlight .mi {
+  color: #009999;
+}
+/* Literal.Number.Integer */
+.highlight .mo {
+  color: #009999;
+}
+/* Literal.Number.Oct */
+.highlight .sb {
+  color: #dd1144;
+}
+/* Literal.String.Backtick */
+.highlight .sc {
+  color: #dd1144;
+}
+/* Literal.String.Char */
+.highlight .sd {
+  color: #dd1144;
+}
+/* Literal.String.Doc */
+.highlight .s2 {
+  color: #dd1144;
+}
+/* Literal.String.Double */
+.highlight .se {
+  color: #dd1144;
+}
+/* Literal.String.Escape */
+.highlight .sh {
+  color: #dd1144;
+}
+/* Literal.String.Heredoc */
+.highlight .si {
+  color: #dd1144;
+}
+/* Literal.String.Interpol */
+.highlight .sx {
+  color: #dd1144;
+}
+/* Literal.String.Other */
+.highlight .sr {
+  color: #009926;
+}
+/* Literal.String.Regex */
+.highlight .s1 {
+  color: #dd1144;
+}
+/* Literal.String.Single */
+.highlight .ss {
+  color: #990073;
+}
+/* Literal.String.Symbol */
+.highlight .bp {
+  color: #999999;
+}
+/* Name.Builtin.Pseudo */
+.highlight .vc {
+  color: #008080;
+}
+/* Name.Variable.Class */
+.highlight .vg {
+  color: #008080;
+}
+/* Name.Variable.Global */
+.highlight .vi {
+  color: #008080;
+}
+/* Name.Variable.Instance */
+.highlight .il {
+  color: #009999;
+}
+/* Literal.Number.Integer.Long */
+.unslider {
+  position: relative;
+  overflow: auto;
+}
+.unslider ul {
+  padding: 0 2px;
+}
+.unslider li {
+  list-style: none;
+}
+.unslider ul li {
+  float: left;
+}
+.unslider .dot {
+  -webkit-filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
+  -moz-filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
+  -ms-filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
+  -o-filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
+  filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
+}
+.unslider .dots {
+  position: absolute;
+  left: 0;
+  right: 0;
+  text-align: center;
+  /* hack to get the dots centered */
+
+  padding-right: 40px;
+  bottom: -8px;
+}
+.unslider .dots li {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 0 4px;
+  text-indent: -999em;
+  border: 2px solid #fff;
+  border-radius: 6px;
+  cursor: pointer;
+  opacity: .4;
+  -webkit-transition: background .5s, opacity .5s;
+  -moz-transition: background .5s, opacity .5s;
+  transition: background .5s, opacity .5s;
+}
+.unslider .dots li.active {
+  background: #fff;
+  opacity: 1;
+}
 body {
   background: #fff;
   font-family: 'SourceSans';
@@ -5834,6 +6256,18 @@ h4 {
   width: 100px;
   height: 100px;
   background-position: -200px 0px;
+}
+.icon-download {
+  background-image: url('/assets/shared/images/info-icons.png');
+  width: 100px;
+  height: 100px;
+  background-position: -300px 0px;
+}
+.icon-laptop {
+  background-image: url('/assets/shared/images/info-icons.png');
+  width: 100px;
+  height: 100px;
+  background-position: -400px 0px;
 }
 .project-icons {
   background-image: url('/assets/shared/images/project-icons.png');
@@ -5896,6 +6330,9 @@ h4 {
 #jumbotron .slide .image {
   margin: 20px 0 0 0;
 }
+#jumbotron .slide .image img {
+  margin: 0 auto;
+}
 #jumbotron .slide .message {
   margin-top: 175px;
 }
@@ -5909,6 +6346,15 @@ h4 {
   font-size: 1.5em;
   line-height: 1.25em;
   color: #f1f1f1;
+}
+#jumbotron .slide .stacked {
+  text-align: center;
+}
+#jumbotron .slide .stacked img {
+  margin: 1em auto 1.75em auto;
+}
+#jumbotron .slide .stacked .message {
+  margin: 0;
 }
 #jumbotron .slide .action-gradient-btn {
   display: inline-block;
@@ -6273,6 +6719,19 @@ header.top .navbar .nav li a:hover {
 }
 header.top .navbar .nav li:first-child {
   font-weight: normal;
+}
+header.top .navbar .nav li.acs-aem-projects {
+  float: right;
+}
+header.top .navbar .nav li.acs-aem-projects a {
+  background-image: url('/assets/shared/images/icon-lightbulb.png');
+  background-repeat: none;
+  background-position: center center;
+  display: block;
+  width: 37px;
+  height: 37px;
+  position: absolute;
+  top: -5px;
 }
 .stripe {
   background: url('../shared/../images/colored-bg.jpg') no-repeat center center fixed;
