acs tools images

--- a/_includes/projects/slides/acs-aem-tools.html
+++ b/_includes/projects/slides/acs-aem-tools.html
@@ -10,7 +10,7 @@
             <div class="secondary message">
                 <div class="text">
                     <h1>ACS AEM Tools</h1>
-                    <p class="lead">A suite of AEM tools aimed at making developer lives easier!</p>
+                    <p class="lead">A suite of open source AEM tools aimed at making developer lives easier!</p>
                 </div>
                 <a href="/acs-aem-tools" class="action-btn">Check out ACS AEM Tools</a>
             </div>
